# wsclean

./: .readthedocs.yaml  CMakeLists.txt  CMakeVersionInfo.txt  wsclean_1.11.orig.tar.bz2.delta  wsclean_1.11.orig.tar.bz2.id  wsclean_1.12.orig.tar.bz2.delta  wsclean_1.12.orig.tar.bz2.id  wsclean_2.0.orig.tar.bz2.delta  wsclean_2.0.orig.tar.bz2.id  wsclean_2.1.orig.tar.bz2.delta  wsclean_2.1.orig.tar.bz2.id  wsclean_2.2.1.orig.tar.bz2.delta  wsclean_2.2.1.orig.tar.bz2.id  wsclean_2.3.orig.tar.bz2.delta  wsclean_2.3.orig.tar.bz2.id  wscversion.h.in
.devcontainer/: devcontainer.json  setup.sh
chgcentre/: main.cpp
debian/: .gitignore  ACTION-GUIDE.sh  PACKAGING.md  QUICKREF.md  WORKFLOW.md  build-and-sign.sh  build-from-tarball.sh  changelog  control  copyright  fetch-latest.sh  fetch-upstream.sh  full-build.sh  inspect-deps.py  install-build-deps.sh  libwsclean0.install  libwsclean2.install  local-build-and-upload.sh  not-installed  pdebuild-local.sh  repack.sh  rules  status.sh  test-install.sh  update-package.sh  verify-setup.sh  watch  wsclean-dev.examples  wsclean-dev.install  wsclean.1  wsclean.install  wsclean.manpages
distributed/: mpibig.cpp  mpibig.h  taskmessage.h  worker.cpp  worker.h  wsclean-mp.cpp
gridding/: averagecorrection.cpp  averagecorrection.h  directmsgridder.cpp  directmsgridder.h  gainmode.h  gridmode.h  h5solutiondata.cpp  h5solutiondata.h  msgridder.cpp  msgridder.h  msgridderbase.cpp  msgridderbase.h  msgridderdata.cpp  msgridderdata.h  msgriddermanager.cpp  msgriddermanager.h  msprovidercollection.cpp  msprovidercollection.h  solutionchannelinterpolation.h  unavailablegridder.h  visibilitymodifier.cpp  visibilitymodifier.h  visibilityweightingmode.h  wsmsgridder.cpp  wsmsgridder.h  wstackinggridder.cpp  wstackinggridder.h
idg/: averagebeam.cpp  averagebeam.h  dummygridder.h  facetidgmsgridder.cpp  facetidgmsgridder.h  idgcommon.cpp  idgcommon.h  idgconfiguration.h  idgmsgridder.cpp  idgmsgridder.h
interface/: example.py  inmemoryms.h  setup.py  wsclean.cpp  wsclean.h  wscleaninterface.cpp
io/: binneduvoutput.h  cachedimageaccessor.h  cachedimageset.h  componentlistwriter.cpp  componentlistwriter.h  facetreader.cpp  facetreader.h  findmwacoefffile.h  imagefilename.h  imageweightcache.h  parsetreader.cpp  parsetreader.h  wscfitswriter.cpp  wscfitswriter.h
main/: commandline.cpp  commandline.h  imageweightinitializer.cpp  imageweightinitializer.h  main.cpp  mshelper.cpp  mshelper.h  progressbar.cpp  progressbar.h  settings.cpp  settings.h  stopwatch.cpp  stopwatch.h  wsclean.cpp  wsclean.h
math/: calculatefftsize.h  fourierdomainrenderer.cpp  fourierdomainrenderer.h  imageoperations.cpp  imageoperations.h  renderer.cpp  renderer.h  subpixelrenderer.cpp  subpixelrenderer.h  tophatconvolution.cpp  tophatconvolution.h
model/: bbsmodel.h  measuredsed.h  measurement.h  model.cpp  model.h  modelcomponent.h  modelparser.h  modelsource.h  powerlawsed.h  spectralenergydistribution.h  tokenizer.h  writemodel.h
msproviders/: averagingmsrowprovider.cpp  averagingmsrowprovider.h  bdamsrowprovider.cpp  bdamsrowprovider.h  contiguousms.cpp  contiguousms.h  directmsrowprovider.cpp  directmsrowprovider.h  inmemoryprovider.cpp  inmemoryprovider.h  mscolumns.h  msdatadescription.cpp  msdatadescription.h  msprovider.cpp  msprovider.h  msrowprovider.cpp  msrowprovider.h  msrowproviderbase.cpp  msrowproviderbase.h  msweightcolumn.cpp  msweightcolumn.h  noisemsrowprovider.cpp  noisemsrowprovider.h  operations.cpp  operations.h  partitionedms.cpp  partitionedms.h  reorderedhandle.h  reorderedmsprovider.cpp  reorderedmsprovider.h  synchronizedms.cpp  synchronizedms.h  timestepbuffer.cpp  timestepbuffer.h
scheduling/: griddingresult.cpp  griddingresult.h  griddingtask.cpp  griddingtask.h  griddingtaskfactory.cpp  griddingtaskfactory.h  griddingtaskmanager.cpp  griddingtaskmanager.h  metadatacache.cpp  metadatacache.h  mpischeduler.cpp  mpischeduler.h  mpiworkerscheduler.cpp  mpiworkerscheduler.h  threadedscheduler.cpp  threadedscheduler.h
scripts/: das6_modules.sh  ds9_facet_generator.py  mpirun-no-slurm.sh  run-format.sh
structures/: facetutil.cpp  facetutil.h  imageweights.cpp  imageweights.h  imagingtable.cpp  imagingtable.h  imagingtableentry.cpp  imagingtableentry.h  inmemorypart.h  inmemoryreordering.cpp  inmemoryreordering.h  mslistitem.h  msselection.cpp  msselection.h  numberlist.h  observationinfo.cpp  observationinfo.h  outputchannelinfo.h  primarybeam.cpp  primarybeam.h  primarybeamimageset.h  resources.cpp  resources.h  weightmode.h
system/: application.h  buffered_lane.h  completionsignal.h  mappedfile.h  pythonfilepath.cpp  pythonfilepath.h
tests/: CMakeLists.txt  tbaselinedependentaveraging.cpp  test_command_catalogue.py  testcachedimageset.cpp  tfitsdateobstime.cpp  tserialization.cpp
tests/common/: smartptr.h
tests/gridding/: taveragecorrection.cpp  tvisibilitymodifier.cpp
tests/idg/: taveragebeam.cpp
tests/io/: tcachedimageset.cpp  tparsetreader.cpp
tests/main/: tcommandline.cpp  tmshelper.cpp  tsettings.cpp
tests/math/: timageoperations.cpp  trenderer.cpp  ttophatconvolution.cpp
tests/model/: tbbsmodel.cpp
tests/msproviders/: tbdamsrowprovider.cpp  tbdamsrowproviderdata.cpp  tbdamsrowproviderdata.h  tinmemoryprovider.cpp  tmsrowproviderbase.cpp  tnoisemsrowprovider.cpp
tests/python/: CMakeLists.txt  aterms_checks.py  basic_checks.py  config_vars.py.in  conftest.py  facet_checks.py  gridder_checks.py  long_system_checks.py  reuse_reorder_checks.py  spectral_imaging_checks.py  sub_pixel_renderer_checks.py  test_deconvolution_write_input.py  utils.py  vela_deconvolution_checks.py
tests/scheduling/: tgriddingtaskfactory.cpp
tests/structures/: testimagingtable.cpp  tfacetutil.cpp  timagingtable.cpp  tmsselection.cpp  toutputchannelinfo.cpp  tprimarybeam.cpp  tprimarybeamimageset.cpp  tresources.cpp
tests/system/: tmappedfile.cpp
wgridder/: callback_double_diagonal.cpp  callback_double_full.cpp  callback_double_trace.cpp  callback_double_xx.cpp  callback_double_yy.cpp  callback_float_diagonal.cpp  gridder_simple.h  (+14 more)
(+106 files in other folders)
